Project

General

Profile

Bug #22288

mds: assert when inode moves during scrub

Added by Douglas Fuller over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Category:
fsck/damage handling
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If an inode moves while on the scrub stack, it can be enqueued a second time and hit:

mds/CInode.cc: 4153: FAILED assert(!scrub_is_in_progress())


Related issues

Copied to CephFS - Backport #23016: luminous: mds: assert when inode moves during scrub Resolved

History

#1 Updated by Douglas Fuller over 5 years ago

  • Status changed from New to In Progress
  • Priority changed from Normal to High

#2 Updated by Douglas Fuller over 5 years ago

  • Status changed from In Progress to Fix Under Review

#3 Updated by Nathan Cutler over 5 years ago

  • Backport changed from Luminous to luminous

#4 Updated by Patrick Donnelly over 5 years ago

  • Subject changed from assert when inode moves during scrub to mds: assert when inode moves during scrub
  • Status changed from Fix Under Review to Pending Backport
  • Component(FS) MDS added

#5 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #23016: luminous: mds: assert when inode moves during scrub added

#6 Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF