cephfs: Reset scrub data when inodes move

If an inode currently on the ScrubStack is moved, it may be
initialized again, causing an assert. Instead, remove the inode
from its parent scrub list and reinitialize it.

Fixes: http://tracker.ceph.com/issues/22288
Signed-off-by: Douglas Fuller <dfuller@redhat.com>
(cherry picked from commit 4f5c8b604cc2a680652516e49e5a7cb4cbbbe887)